--- a/angular/angular.json
+++ b/angular/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "try-redux-toolkit": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "try-redux-toolkit"
+    }
+  },
+  "defaultProject": "try-redux-toolkit",
+  "cli": {
+    "analytics": "27efee69-0f67-4448-9977-61c9cbc404fc"
+  }
 }
